plugins {
  id 'application'
  id 'jacoco'
}

apply plugin: "groovy"
apply plugin: "java"


group 'pl.boringstuff'
version '1.0.0'

repositories {
  mavenCentral()
}

jacoco {
  toolVersion = "0.8.6"
}

jacocoTestReport {
  dependsOn test
  reports {
    xml.enabled false
    csv.enabled false
  }
}

java {
  sourceCompatibility = JavaVersion.VERSION_15
  targetCompatibility = JavaVersion.VERSION_15
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.add('--enable-preview')
}
tasks.withType(JavaExec) {
  jvmArgs += '--enable-preview'
}
tasks.withType(Test) {
  jvmArgs += "--enable-preview"
}

application {
  mainClass = 'pl.boringstuff.AppRunner'
}

run.with {
  it.args(safeGet("dateFrom"), safeGet("resultDir"), safeGet("repoPath"), safeGet("reportFormat"))
}

String safeGet(String name) {
  if (project.hasProperty(name)) {
    return "$name=${project.getProperty(name)}"
  }
  ""
}


dependencies {
  compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.4.2'
  compile group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
  compile group: 'org.freemarker', name: 'freemarker', version: '2.3.30'
  compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.2'
  compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.10.0.202012080955-r'

  testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.6', ext: 'pom'
  testCompile group: 'org.spockframework', name: 'spock-core', version: '2.0-M3-groovy-3.0'
  testCompile group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.5'
}
task collectJars(type: Copy) {
  into "$buildDir/output/lib"
  from configurations.testRuntime
}
test {
  useJUnitPlatform()
  testLogging {
    events "passed", "skipped", "failed"
  }
}

